--- a/PreprocessV2.vcxproj.filters
+++ b/PreprocessV2.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="FileConverter.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Preprocess.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Preprocess.h">
