--- a/PreprocessV2.vcxproj
+++ b/PreprocessV2.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Data.cpp" />
     <ClCompile Include="FileConverter.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Preprocess.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Data.h" />
