--- a/PreprocessV2.vcxproj
+++ b/PreprocessV2.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="FileConverter.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Preprocess.cpp" />
+    <ClCompile Include="Preprocess_multi.cpp" />
     <ClCompile Include="SW.cpp" />
     <ClCompile Include="Writer.cpp" />
   </ItemGroup>
@@ -150,6 +151,7 @@
     <ClInclude Include="Data.h" />
     <ClInclude Include="FileConverter.h" />
     <ClInclude Include="Preprocess.h" />
+    <ClInclude Include="Preprocess_multi.h" />
     <ClInclude Include="SW.h" />
     <ClInclude Include="Writer.h" />
   </ItemGroup>
