--- a/PreprocessV2.vcxproj
+++ b/PreprocessV2.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="Writer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cost.h" />
     <ClInclude Include="Data.h" />
     <ClInclude Include="FileConverter.h" />
     <ClInclude Include="Preprocess.h" />
