--- a/PreprocessV2.vcxproj.filters
+++ b/PreprocessV2.vcxproj.filters
@@ -33,7 +33,7 @@
     <ClCompile Include="Writer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Preprocess_multi.cpp">
+    <ClCompile Include="PreprocessQuad.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -53,10 +53,10 @@
     <ClInclude Include="Writer.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Preprocess_multi.h">
+    <ClInclude Include="Cost.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Cost.h">
+    <ClInclude Include="PreprocessQuad.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
