make base class

--- a/PreprocessV2.vcxproj
+++ b/PreprocessV2.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="FileConverter.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Preprocess.cpp" />
+    <ClCompile Include="PreprocessBase.cpp" />
     <ClCompile Include="PreprocessQuad.cpp" />
     <ClCompile Include="SW.cpp" />
     <ClCompile Include="Writer.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="Data.h" />
     <ClInclude Include="FileConverter.h" />
     <ClInclude Include="Preprocess.h" />
+    <ClInclude Include="PreprocessBase.h" />
     <ClInclude Include="PreprocessQuad.h" />
     <ClInclude Include="PreprocessSW.h" />
     <ClInclude Include="SW.h" />
