add double and triple

--- a/PreprocessV2.vcxproj
+++ b/PreprocessV2.vcxproj
@@ -142,10 +142,12 @@
     <ClCompile Include="Data.cpp" />
     <ClCompile Include="FileConverter.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PreprocessDouble.cpp" />
     <ClCompile Include="PreprocessSingle.cpp" />
     <ClCompile Include="PreprocessBase.cpp" />
     <ClCompile Include="PreprocessQuad.cpp" />
     <ClCompile Include="PreprocessSW.cpp" />
+    <ClCompile Include="PreprocessTriple.cpp" />
     <ClCompile Include="SimpleSW.cpp" />
     <ClCompile Include="SWBase.cpp" />
     <ClCompile Include="Writer.cpp" />
@@ -154,10 +156,12 @@
     <ClInclude Include="Cost.h" />
     <ClInclude Include="Data.h" />
     <ClInclude Include="FileConverter.h" />
+    <ClInclude Include="PreprocessDouble.h" />
     <ClInclude Include="PreprocessSingle.h" />
     <ClInclude Include="PreprocessBase.h" />
     <ClInclude Include="PreprocessQuad.h" />
     <ClInclude Include="PreprocessSW.h" />
+    <ClInclude Include="PreprocessTriple.h" />
     <ClInclude Include="SImpleSW.h" />
     <ClInclude Include="SWBase.h" />
     <ClInclude Include="Writer.h" />
