--- a/PreprocessV2.vcxproj
+++ b/PreprocessV2.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="FileConverter.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PreprocessDouble.cpp" />
+    <ClCompile Include="PreprocessParallel.cpp" />
     <ClCompile Include="PreprocessSingle.cpp" />
     <ClCompile Include="PreprocessBase.cpp" />
     <ClCompile Include="PreprocessQuad.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="Data.h" />
     <ClInclude Include="FileConverter.h" />
     <ClInclude Include="PreprocessDouble.h" />
+    <ClInclude Include="PreprocessParallel.h" />
     <ClInclude Include="PreprocessSingle.h" />
     <ClInclude Include="PreprocessBase.h" />
     <ClInclude Include="PreprocessQuad.h" />
